--- a/projects/ising.html
+++ b/projects/ising.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <meta name="author" content="Vishal Golcha">
 <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.0/darkly/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="plugins/bootstrap-select.min.css">
-<link rel="stylesheet" href="plugins/bootstrap-slider.min.css">
+<link rel="stylesheet" href="bootstrap-select.min.css">
+<link rel="stylesheet" href="bootstrap-slider.min.css">
 
 </head>
 
@@ -72,8 +72,8 @@
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="plugins/bootstrap-select.min.js"></script>
-<script src="plugins/bootstrap-slider.min.js"></script>
+<script src="bootstrap-select.min.js"></script>
+<script src="bootstrap-slider.min.js"></script>
 <script src="ising.js"></script>
 </body>
 
